--- a/assets/variables.scss
+++ b/assets/variables.scss
@@ -1,4 +1,5 @@
 @import "~vuetify/src/styles/styles.sass";
+@import "~assets/mixins.scss";
 
 @font-face {
   font-family: 'IRYekan';
@@ -12,7 +13,6 @@
   /* FF3.6+, IE9, Chrome6+, Saf5.1+ */
   font-weight: 900;
 }
-
 @font-face {
   font-family: 'IRYekan';
   src: url('~assets/fonts/eot/iranyekanweblight(fanum).eot?#') format('eot'),
@@ -25,7 +25,6 @@
   /* FF3.6+, IE9, Chrome6+, Saf5.1+ */
   font-weight: 200;
 }
-
 @font-face {
   font-family: 'IRYekan';
   src: url('~assets/fonts/eot/iranyekanwebregular(fanum).eot?#') format('eot'),
@@ -74,6 +73,7 @@
   /* FF3.6+, IE9, Chrome6+, Saf5.1+ */
   font-weight: 600;
 }
+$body-font-family: 'IRANSans', sans-serif !default;
 .v-application--wrap {
   font-family: 'IRANSans', sans-serif !important;
   font-weight: 600 !important;
@@ -186,4 +186,8 @@ input[type='number'] {
     color: var(--v-info-base);
     border-color: var(--v-info-lighten1);
   }
+}
+
+legend, label {
+  text-align: right;
 }
